// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> renders checked checkbox correclty 1`] = `
<div
  className="hw-checkbox-wrapper checkbox_wrapper"
>
  <input
    checked={true}
    className="hw-checkbox checkbox"
    name="test"
    onClick={undefined}
    required={undefined}
    type="checkbox"
    value="test value"
  />
  <div
    className="icon checked"
  >
    <div
      className="hw-icon Icon"
    >
      <svg
        className="IconSvg"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M21.3 0H2.7C1.2 0 0 1.2 0 2.7v18.7C0 22.8 1.2 24 2.7 24h18.7c1.5 0 2.7-1.2 2.7-2.7V2.7C24 1.2 22.8 0 21.3 0zM10.8 17.4l-2.1 2.1-6.2-6.2 2.1-2.1 4.1 4.1L19.4 4.5l2.1 2.1-10.7 10.8z"
        />
      </svg>
    </div>
  </div>
  <div
    className="icon unchecked"
  >
    <div
      className="hw-icon Icon"
    >
      <svg
        className="IconSvg"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M21.3 2.7v18.7H2.7V2.7h18.6zm0-2.7H2.7C1.2 0 0 1.2 0 2.7v18.7C0 22.8 1.2 24 2.7 24h18.7c1.5 0 2.7-1.2 2.7-2.7V2.7C24 1.2 22.8 0 21.3 0z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> renders correctly with defaults 1`] = `
<div
  className="hw-checkbox-wrapper checkbox_wrapper"
>
  <input
    checked={undefined}
    className="hw-checkbox checkbox"
    name="test"
    onClick={undefined}
    required={undefined}
    type="checkbox"
    value="test value"
  />
  <div
    className="icon checked"
  >
    <div
      className="hw-icon Icon"
    >
      <svg
        className="IconSvg"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M21.3 0H2.7C1.2 0 0 1.2 0 2.7v18.7C0 22.8 1.2 24 2.7 24h18.7c1.5 0 2.7-1.2 2.7-2.7V2.7C24 1.2 22.8 0 21.3 0zM10.8 17.4l-2.1 2.1-6.2-6.2 2.1-2.1 4.1 4.1L19.4 4.5l2.1 2.1-10.7 10.8z"
        />
      </svg>
    </div>
  </div>
  <div
    className="icon unchecked"
  >
    <div
      className="hw-icon Icon"
    >
      <svg
        className="IconSvg"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M21.3 2.7v18.7H2.7V2.7h18.6zm0-2.7H2.7C1.2 0 0 1.2 0 2.7v18.7C0 22.8 1.2 24 2.7 24h18.7c1.5 0 2.7-1.2 2.7-2.7V2.7C24 1.2 22.8 0 21.3 0z"
        />
      </svg>
    </div>
  </div>
</div>
`;
